[tool.poetry]
name = "trips"
version = "0.1.0"
description = ""
authors = ["Victor <maricatovictor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dask = "^2021.7.1"
dask-geopandas = "^0.1.0-alpha.4"
SQLAlchemy = "^1.4.22"
GeoAlchemy2 = "^0.9.2"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
